# AudioEncoder

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/rzm/mediaencode/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEncoder.cpp  audio_encoder.cpp  audio_encoder.h
app/src/main/java/com/rzm/mediaencode/: AudioEncoder.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rzm/mediaencode/: ExampleUnitTest.java
